vlib/v/checker/tests/option_and_result_err.vv
fn foo() !?i32 {
	return 6
}